fix: language toggle button shows current lang instead of target

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,1 +1,52 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>NearBite Admin</title><style>body{font-family:'Segoe UI',sans-serif;display:flex;align-items:center;justify-content:center;min-height:100vh;margin:0;background:#0d1117;color:#e6edf3;text-align:center}.c{padding:40px}h1{color:#ff6b35}a{color:#58a6ff}</style></head><body><div class="c"><h1>🔒 平台管理后台</h1><p>即将上线，敬请期待</p><a href="/">← 返回买家界面</a></div></body></html>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NearBite Admin 管理后台</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary: #ff6b35;
+            --primary-light: #fff7ed;
+            --primary-dark: #ea580c;
+            --bg: #fafafa;
+            --text: #111827;
+            --text-2: #6b7280;
+        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: 'Inter', sans-serif;
+            background: var(--bg);
+            color: var(--text);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+        .container { max-width: 600px; text-align: center; }
+        .icon { font-size: 64px; margin-bottom: 20px; }
+        h1 { font-size: 24px; margin-bottom: 12px; color: var(--primary-dark); }
+        p { color: var(--text-2); margin-bottom: 24px; }
+        .back-btn {
+            display: inline-block;
+            padding: 12px 24px;
+            background: var(--primary);
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            font-weight: 600;
+        }
+        .back-btn:hover { background: var(--primary-dark); }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="icon">🔒</div>
+        <h1>NearBite Admin 管理后台</h1>
+        <p>管理后台页面 - Phase 1f 将实现</p>
+        <a href="/" class="back-btn">← 返回首页</a>
+    </div>
+</body>
+</html>
