feat: 二维码点餐系统
- 商家设置页新增'点餐二维码'功能
- 点击生成包含商户ID的二维码
- 支持预设桌号(可选)
- 支持下载/打印二维码
- 买家首页支持?merchant=ID&table=号码 URL参数
- 扫码自动打开对应商户菜单

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1700,6 +1700,35 @@
         toast(currentLang === 'zh' ? '已退出登录' : 'Logged out', 'info');
     }
 
+    /* ===== QR Code / URL参数处理 ===== */
+    async function handleQREntry() {
+        var params = new URLSearchParams(window.location.search);
+        var merchantId = params.get('merchant');
+        var tableNum = params.get('table');
+        if (!merchantId) return;
+
+        // 扫码进入，自动加载该商户
+        try {
+            var resp = await fetch(API_BASE + '/merchants/' + merchantId);
+            if (!resp.ok) return;
+            var merchant = await resp.json();
+            if (tableNum) {
+                // 预填桌号
+                sessionStorage.setItem('qr_table_number', tableNum);
+            }
+            // 自动展开该商户的菜单
+            if (typeof openMerchant === 'function') {
+                openMerchant(merchant);
+            } else if (typeof showMerchantDetail === 'function') {
+                showMerchantDetail(merchant);
+            }
+            // 清除URL参数避免刷新重复触发
+            window.history.replaceState({}, '', window.location.pathname);
+        } catch(e) {
+            console.error('QR entry error:', e);
+        }
+    }
+
     /* ===== Init ===== */
     window.addEventListener('DOMContentLoaded', async function() {
         applyLang();
@@ -1709,6 +1738,8 @@
         searchMerchants();
         updateCartUI();
         updateUserUI();
+        // 检查是否从二维码扫入
+        setTimeout(handleQREntry, 500);
     });
     </script>
 </body>
