fix: JS syntax error in i18n breaking entire page (order_success/added_to_cart)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1100,8 +1100,8 @@
             register: '注册',
             login_success: '登录成功',
             register_success: '注册成功',
-            order_success:',
-            added_to '下单成功！_cart: '已加入购物车',
+            order_success: '下单成功！',
+            added_to_cart: '已加入购物车',
             cart_updated: '购物车已更新',
             no_merchants_nearby: '附近没有在线商户',
             empty_cart_warning: '购物车是空的',
