--- a/frontend/kitchen.html
+++ b/frontend/kitchen.html
@@ -1271,7 +1271,8 @@
         }
     }
 
-    async function checkAuth() {
+    async function checkAuth(retries) {
+        retries = retries || 0;
         if (!token) {
             showLoginPage();
             return false;
@@ -1279,19 +1280,23 @@
 
         try {
             const data = await apiCall('/auth/me');
-            if (data && data.id) {  // Fix: 检查data.id而不是data.user
+            if (data && data.id) {
                 user = data;
                 return true;
             }
         } catch (e) {
-            // 只有401错误才显示登录页面，其他错误（如rate limit）重试
+            // 401 = token无效，显示登录
             if (e.message && e.message.includes('401')) {
                 showLoginPage();
                 return false;
             }
-            // 其他错误，稍后重试
-            console.error('Auth check failed:', e);
-            // 仍然显示登录页面，但记录错误
+            // 429或网络错误 → 等一下重试（最多3次）
+            if (retries < 3) {
+                console.warn('Auth check failed, retry ' + (retries + 1) + '/3:', e.message);
+                await new Promise(function(r) { setTimeout(r, 2000); });
+                return checkAuth(retries + 1);
+            }
+            console.error('Auth check failed after retries:', e);
             showLoginPage();
             return false;
         }
